--- a/StudentManagementWebApp/Views/Authentication/Login.cshtml
+++ b/StudentManagementWebApp/Views/Authentication/Login.cshtml
@@ -1,5 +1,4 @@
-﻿@model StudentManagementWebApp.Models.User
-@{
+﻿@{
     Layout = "";
 }
 <!DOCTYPE html>
@@ -9,39 +8,58 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Đăng nhập</title>
-    @Styles.Render("~/Content/Customs/Login.css")
+    @Styles.Render("~/Content/Customs/Login.razor.css")
 </head>
 
+@if (ViewBag.error != null)
+{
+<script type="text/javascript">
+        
+        window.onload = function () {
+            errModal.classList.add("show");
+            modalBackground.style.display = "block";
+        };       
+</script>
+}
 <body id="particles-js" width="100%" height="100%">
     <div class="animated bounceInDown">
         <div class="container">
-            <span class="error animated tada" id="msg"></span>
+            <span class="error animated tada" id="msg">@ViewBag.error</span>
             <form name="form1" class="box" onsubmit="return checkStuff()" method="post" action="@Url.Action("Login","Authentication")">
                 @Html.AntiForgeryToken()
                 <h4><span style="font-size: 24px">Cổng Thông Tin Sinh Viên</span></h4>
                 <h5>Đăng Nhập Hệ Thống</h5>
-                <input type="text" name="username" placeholder="Username" autocomplete="off">
+                <input type="text" name="username" placeholder="Username" autocomplete="off" required>
                 <i class="typcn typcn-eye" id="eye"></i>
-                <input type="password" name="password" placeholder="Passsword" id="pwd" autocomplete="off">
+                <input type="password" name="password" placeholder="Passsword" id="pwd" autocomplete="off" required>
                 <a href="#" class="forgetpass">Quên mật khẩu?</a>
-                <input name="" type="submit" value="Đăng Nhập" class="btn1">
+                <input name="action:Login" type="submit" value="Đăng Nhập" class="btn1">
             </form>
             <a href="@Url.Action("Register", "Authentication")" class="dnthave">Chưa có tài khoản? Đăng ký ngay!</a>
-        </div>
+        </div>       
         <div class="footer">
             <span>Made with <i class="fa fa-heart pulse"></i></span>
         </div>
     </div>
     <canvas class="particles-js-canvas-el" style="width: 100%; height: 100%;" width="1320" height="320"></canvas>
-    @if (ViewBag.Message != null)
-    {
-        <script type="text/javascript">
-            window.onload = function () {
-                alert("@ViewBag.Message");
-            };
-        </script>
-    }
+    <div id="modalBackground"></div>
+    <div class="alertModal">
+        <div class="alert-box">
+            <div class="top">
+                <div class="top-icon">!</div>
+                <div class="close" id="btnClose-js">
+                    <img src="~/Assets/close.svg" alt="">
+                </div>
+            </div>
+            <div class="bot">
+                <div class="alert--header">Không tìm thấy</div>
+                <div class="alert--content">Tài khoản hoặc mật khẩu đã nhập chưa đúng.<br>Vui lòng thử lại!</div>
+                <div class="alert--btn" id="btnTryAgain-js">Thử Lại</div>
+            </div>
+        </div>
+    </div>
+
 </body>
 @Scripts.Render("https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js")
-@Scripts.Render("~/Scripts/Customs/Login.js")
+@Scripts.Render("~/Scripts/Customs/Login.razor.js")
 </html>
