--- a/StudentManagementWebApp/Views/Authentication/Register.cshtml
+++ b/StudentManagementWebApp/Views/Authentication/Register.cshtml
@@ -11,9 +11,9 @@
             //@Html.ValidationSummary()
             @Html.AntiForgeryToken()
 
-            <div class="card">
+            <div class="card" style="margin: 0 auto;">
                 <div class="card-header">
-                    <div class="card-title">Register</div>
+                    <div class="card-title">Trang Đăng Ký Cùi =))</div>
                 </div>
                 <div class="card-body">
                     <div class="form-group">
