--- a/StudentManagementWebApp/Views/Error/Page401.cshtml
+++ b/StudentManagementWebApp/Views/Error/Page401.cshtml
@@ -4,10 +4,10 @@
     <meta name="viewport" content="width=device-width" />
     <title>Error</title>
 </head>
-<body>
+<body style="background-image: url('../../Assets/error_401.png')">
     <hgroup>
         <h1 style="color: red">Error!</h1>
-        <h2>Your item you have just requested does not match!</h2>
+        <h2>Bạn Không có quyền truy cập trang này!</h2>
     </hgroup>
 </body>
 </html>
