--- a/StudentManagementWebApp/Views/Error/PageNotFound.cshtml
+++ b/StudentManagementWebApp/Views/Error/PageNotFound.cshtml
@@ -1,7 +1,4 @@
-﻿@{
-    Layout = "~/Views/Shared/_Layout.cshtml";
-}
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
