--- a/StudentManagementWebApp/Views/Home/Index.cshtml
+++ b/StudentManagementWebApp/Views/Home/Index.cshtml
@@ -16,7 +16,7 @@
         <p>
             Sinh viên là sinh viên học trong 1 trường đại học được gọi là sinh viên =))
         </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+        <p><a class="btn btn-default" href="~/Home/Intro">Learn more &raquo;</a></p>
       </div>
     <div class="col-md-4">
         <h2>Thế nào là lùa gà?</h2>
@@ -25,11 +25,11 @@
             Trong đó, "đàn gà" ở đây chính là phép ẩn dụ chỉ những nhà đầu tư muốn rót vốn kiếm lời. Còn người lùa được hiểu là nhà phát hành tiền ảo với hứa hẹn, quảng cáo sẽ đem lại nhuận khủng cho họ trong thời gian ngắn. Chiêu trò này đánh vào lòng tham trở thành "tỷ phú chỉ sau một đêm" nên rất dễ lôi kéo, dụ dỗ được đông đảo thành viên bỏ tiền tham gia đầu tư để nhằm mục đích trục lợi cho cá nhân.
             Sau khi đã "lùa" thành công một số lượng "gà" đủ lớn, chủ sàn sẽ ôm tài sản bỏ chạy hoặc khiến cho đồng tiền tụt giá không phanh và chối bỏ trách nhiệm. Lúc này, người chơi mới ngỡ ngàng nhận ra mình thua lỗ và bị mất trắng khoản đầu tư bỏ ra ban đầu nhưng đã quá muộn.
         </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+        <p><a class="btn btn-default" href="~/Home/Intro">Learn more &raquo;</a></p>
     </div>
     <div class="col-md-4">
         <h2>Thêm thông tin về trường</h2>
         <p>Trường đại học Lùa Gà là trường đại học hàng đầu uy tin nhất Đông Lào, chuyên đào tạo các khóa lùa gà chất lượng cao. Cam kết 100% đậu, ra trường kiếm hàng chục tỷ USD mỗi tháng là chuyện đơn giản. Hãy liên hệ ngay với chúng tôi qua hotline: 113</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+        <p><a class="btn btn-default" href="~/Home/Intro">Learn more &raquo;</a></p>
     </div>
 </div>
