--- a/StudentManagementWebApp/Views/Home/Intro.cshtml
+++ b/StudentManagementWebApp/Views/Home/Intro.cshtml
@@ -2,8 +2,10 @@
     ViewBag.Title = "Intro page";
 }
 
-<h1>Chào mừng bạn đã đến với kênh lùa gà top 1 vũ trụ</h1>
-<p>
-    Bấm vào nút sau để tới kênh <br />
-    <a class="btn btn-success" href="https://github.com/dat911zz">Click me to show link!  &raquo;</a>
-</p>
+<div class="container text-center" style="height: 500px">
+    <h1 class="mt-5">Chào mừng bạn đã đến với kênh lùa gà top 1 vũ trụ</h1>
+    <p>
+        Bấm vào nút sau để tới kênh <br />
+        <a class="btn btn-success" href="https://github.com/dat911zz">Click me to show link!  &raquo;</a>
+    </p>
+</div>
