--- a/StudentManagementWebApp/Views/Student/CourseDetails.cshtml
+++ b/StudentManagementWebApp/Views/Student/CourseDetails.cshtml
@@ -6,40 +6,11 @@
 
 <h2 class="text-center" style="color: #384289;">Danh sách các môn học đã đăng ký</h2>
 <div class="container">
-    <h4 style="text-align: left;">Chọn số lượng dòng</h4>
-    <div class="form-group">
-        <!--		Show Numbers Of Rows 		-->
-        <select class="form-control" name="state" id="maxRows">
-            <option value="5000">Show ALL Rows</option>
-            <option value="5">5</option>
-            <option value="10">10</option>
-            <option value="15">15</option>
-            <option value="20">20</option>
-            <option value="50">50</option>
-            <option value="70">70</option>
-            <option value="100">100</option>
-        </select>
-
+    <div class="table-responsive">
+        <table id="table-id" class="table table-bordered">
+            @Html.Raw(ViewBag.CourseList)
+        </table>
     </div>
-    <table id="table-id" class="blueTable">
-        @Html.Raw(ViewBag.CourseList)
-    </table>
-    <!--		Start Pagination -->
-    <div class='pagination-container'>
-        <nav>
-            <ul class="pagination">
-
-                <li data-page="prev">
-                    <span> < <span class="sr-only">(current)</span></span>
-                </li>
-                <!--	Here the JS Function Will Add the Rows -->
-                <li data-page="next" id="prev">
-                    <span> > <span class="sr-only">(current)</span></span>
-                </li>
-            </ul>
-        </nav>
-    </div>
-</div>
 <div class="container margin-top-15 center-block">
     <p>
         @Html.ActionLink("Trở về trang trước", "Details", new { id = ViewBag.Id }, htmlAttributes: new { @class = "btn btn-primary" })
