--- a/StudentManagementWebApp/Views/Error/Page401.cshtml
+++ b/StudentManagementWebApp/Views/Error/Page401.cshtml
@@ -4,10 +4,10 @@
     <meta name="viewport" content="width=device-width" />
     <title>Error</title>
 </head>
-<body style="background-image: url('../../Assets/error_401.png')">
-    <hgroup>
-        <h1 style="color: red">Error!</h1>
+<body>
+    <div class="text-center" style="height: 900px; background-image: url('../Assets/error_401.png') !important; background-repeat: no-repeat; background-size:contain; background-position: center;">
+        <h1 style="margin-top: 50px; color: red">Error!</h1>
         <h2>Bạn Không có quyền truy cập trang này!</h2>
-    </hgroup>
+    </div>
 </body>
 </html>
