--- a/StudentManagementWebApp/Views/Home/Intro.cshtml
+++ b/StudentManagementWebApp/Views/Home/Intro.cshtml
@@ -1,11 +1,11 @@
 ﻿@{
-    ViewBag.Title = "Intro page";
+    ViewBag.Title = "Thông Tin Về Trường";
 }
 
 <div class="container text-center" style="height: 500px">
-    <h1 class="mt-5">Chào mừng bạn đã đến với kênh lùa gà top 1 vũ trụ</h1>
+    <h1 class="mt-5">Chào mừng bạn đã đến với Đại Học Lùa Gà top 1 vũ trụ</h1>
     <p>
-        Bấm vào nút sau để tới kênh <br />
-        <a class="btn btn-success" href="https://github.com/dat911zz">Click me to show link!  &raquo;</a>
+        Bấm vào nút sau để xem thông tin hiệu trưởng <br /> <br />
+        <a class="btn btn-success" href="https://github.com/dat911zz">Click me!  &raquo;</a>
     </p>
 </div>
