--- a/StudentManagementWebApp/Views/Shared/_Layout1.cshtml
+++ b/StudentManagementWebApp/Views/Shared/_Layout1.cshtml
@@ -98,7 +98,7 @@
                     <ul class="dropdown-list dropdown-menu dropdown-menu-right shadow animated--grow-in"
                         aria-labelledby="alertsDropdown">
                         <h6 class="dropdown-header">
-                            Alerts Center
+                            Thông Báo
                         </h6>
                         <li>
                             <a class="dropdown-item d-flex align-items-center" href="#">
@@ -122,7 +122,7 @@
                                 </div>
                                 <div>
                                     <div class="small text-gray-500">10/06/2022</div>
-                                    $999999.99 has been deposited into your account!
+                                    $999999.99 đã bị rút khỏi tài khoản
                                 </div>
                             </a>
                         </li>
