--- a/StudentManagementWebApp/Views/Student/Index.cshtml
+++ b/StudentManagementWebApp/Views/Student/Index.cshtml
@@ -10,7 +10,7 @@
     }
 }
 <div class="text-capitalize text-center">
-    <h1 class="text-capitalize text-info">Trang thông tin sinh viên</h1>
+    <h1 class="text-capitalize text-info">Quản trị sinh viên</h1>
 
     <div style="padding: 0 0 20px 0">
         @Html.ActionLink("Create New", "Create", "Student", null,
